# acronyms

./: .gitignore  README.md  pyproject.toml
frontend/: README.md  eslint.config.js  index.html  vite.config.js
frontend/src/: App.css  App.jsx  App.test.jsx  exportResults.js
src/acronyms/: __init__.py  cli.py  extractor.py  web.py
tests/: test_cli.py  test_extractor.py  test_web.py
