[project]
name = "acronyms"
version = "0.1.0"
description = "Extract acronyms from PDF files using parenthesized uppercase terms."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=5.0.0",
]

[project.scripts]
acronyms = "acronyms.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acronyms"]