[project]
name = "acronyms"
version = "0.1.0"
description = "Extract acronyms from PDF files using parenthesized uppercase terms."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]

[project.scripts]
acronyms = "acronyms.cli:main"
acronyms-web = "acronyms.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acronyms"]
